# voice-identification

./: .llm.md  AGENTS.md  README.md  devlogs.md  nova.py  play.py  pyproject.toml
.dingllm/prds/v1/: 000_overview.md  001_wespeaker.md  002_openwakeword.md  003_silero_vad.md  004_faster_whisper.md  005_deepseek.md  006_kokoro.md
nova/: __main__.py  audio.py  llm.py  pipeline.py  speaker.py  stt.py  tts.py  wakeword.py
